# algorithm

./: C++.code-workspace
VsCode/GraphicsPack/: CMakeLists.txt  MainPa3.cpp  OBJ_Loader.h  main.cpp  mainPa2.cpp
VsCode/Opengl graphics/include/glad/: glad.h
VsCode/Opengl graphics/src/: Shader.h  fragmentSource.txt  main.cpp  vertexSource.txt
VsCode/ProjectC#/: Program.cs  ProjectC#.csproj  ProjectC#.sln
VsCode/ProjectC++/C++/: Algorithm.cpp  LibreOj.cpp  algorithm_exercise.cpp  main.cpp  my_libraries.h  simulation.cpp
VsCode/ProjectJava/: Test.java
VsCode/ProjectLua/: main.Lua
VsCode/VEX/: 11_attribwrangle1_snippet.vfl  13_attribwrangle1_snippet.vfl  14_Group_Bounding_Regions_snippet.vfl  14_attribwrangle1_snippet.vfl  15_attribwrangle1_snippet.vfl  16_attribwrangle1_snippet.vfl  19_attribwrangle2_remove_ori_prim.txt  19_attribwrangle2_snippet.vfl  19_attribwrangle3_snippet.vfl  26_Group_by_normal_snippet.vfl  359_attribwrangle2_snippet.vfl  361_attribwrangle3_snippet.vfl  365_attribwrangle4_snippet.vfl  368_attribwrangle5_snippet.vfl  379_attribwrangle6_snippet.vfl  380_pointwrangle1_snippet.vfl  38_attribwrangle1_snippet.vfl  398_pointwrangle2_snippet.vfl  45_remove_prim_snippet.vfl  47_remove_prim1_snippet.vfl  50_attribwrangle2_snippet.vfl  58_attribwrangle2_snippet.vfl  96_attribwrangle7_snippet.vfl
VsCode/graphics/.cache/clangd/index/: Triangle.cpp.48A3B86028749932.idx  Triangle.hpp.F7E0EF4592995B33.idx  global.hpp.B15A76F456669974.idx  main.cpp.C949D36E0B2303F5.idx  (+2 more)
VsCode/graphics/PA1/: CMakeLists.txt  main.cpp
VsCode/python/: main.py  simulation.py
